# RusticSQLManager

./: Cargo.toml
src/: cli.rs  config.rs  main.rs  password_handler.rs
src/create/: mod.rs
