[package]
name = "rustic_sql_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.68", features = ["backtrace"] }
config = { version = "0.14.0", features = ["toml"] }
keyring = { version = "2.3.2", features = ["platform-all"] }
thiserror = { version = "1.0.38" }
clap = { version = "4.0.32", features = ["derive", "usage", "color", "help", "suggestions", "error-context"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
toml = "0.8.12"
sqlx = { version = "0.7.4", features = ["mysql", "macros", "sqlx-mysql", "json", "runtime-tokio", "tls-native-tls"] }
sqlx-mysql = { version = "0.7.4", features = ["serde"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros", "full"] }
rpassword = "7.3.1"
